bug 422163: BigIntegerField only accepts Long values https://bugs.eclipse.org/bugs/show_bug.cgi?id=422163 Change-Id: Ib75f4e5bcb4dd43940fba940bb269bb09c01d0e4 Signed-off-by: Adrian Sacchi <adrian.sacchi@bsiag.com> Reviewed-on: https://git.eclipse.org/r/18906 Tested-by: Hudson CI Reviewed-by: Judith Gull <jgu@bsiag.com> IP-Clean: Judith Gull <jgu@bsiag.com>