@@ -10,7 +10,7 @@
  ******************************************************************************/
 package org.eclipse.scout.rt.client.ui.form.fields.integerfield;
 
-import java.text.ParsePosition;
+import java.math.BigDecimal;
 
 import org.eclipse.scout.commons.annotations.ConfigProperty;
 import org.eclipse.scout.commons.annotations.Order;
@@ -18,7 +18,6 @@ import org.eclipse.scout.commons.exception.ProcessingException;
 import org.eclipse.scout.commons.logger.IScoutLogger;
 import org.eclipse.scout.commons.logger.ScoutLogManager;
 import org.eclipse.scout.rt.client.ui.form.fields.numberfield.AbstractNumberField;
-import org.eclipse.scout.rt.shared.ScoutTexts;
 import org.eclipse.scout.rt.shared.data.form.ValidationRule;
 
 public abstract class AbstractIntegerField extends AbstractNumberField<Integer> implements IIntegerField {
@@ -35,18 +34,42 @@ public abstract class AbstractIntegerField extends AbstractNumberField<Integer> 
   /*
    * Configuration
    */
+  /**
+   * @deprecated Will be removed with scout 3.11, use {@link #getConfiguredMinValue()}.<br>
+   *             As long as this deprecated version is overridden in subclasses. This setting wins over
+   *             {@link #getConfiguredMinValue()} in {@link #initConfig()}.
+   */
+  @Deprecated
+  @ValidationRule(ValidationRule.MIN_VALUE)
+  protected Integer getConfiguredMinimumValue() {
+    return getConfiguredMinValue();
+  }
+
+  /**
+   * @deprecated Will be removed with scout 3.11, use {@link #getConfiguredMaxValue()}.<br>
+   *             As long as this deprecated version is overridden in subclasses. This setting wins over
+   *             {@link #getConfiguredMaxValue()} in {@link #initConfig()}.
+   */
+  @Deprecated
+  @ValidationRule(ValidationRule.MAX_VALUE)
+  protected Integer getConfiguredMaximumValue() {
+    return getConfiguredMaxValue();
+  }
+
+  @Override
   @ConfigProperty(ConfigProperty.INTEGER)
   @Order(250)
   @ValidationRule(ValidationRule.MIN_VALUE)
-  protected Integer getConfiguredMinimumValue() {
-    return null;
+  protected Integer getConfiguredMinValue() {
+    return Integer.MIN_VALUE;
   }
 
+  @Override
   @ConfigProperty(ConfigProperty.INTEGER)
   @Order(260)
   @ValidationRule(ValidationRule.MAX_VALUE)
-  protected Integer getConfiguredMaximumValue() {
-    return null;
+  protected Integer getConfiguredMaxValue() {
+    return Integer.MAX_VALUE;
   }
 
   @Override
@@ -56,23 +79,31 @@ public abstract class AbstractIntegerField extends AbstractNumberField<Integer> 
     setMaxValue(getConfiguredMaximumValue());
   }
 
-  // convert string to a real int
+  /**
+   * Set the minimum value for this field. If value is <code>null</code>, it is replaced by Integer.MIN_VALUE.
+   */
+  @Override
+  public void setMinValue(Integer value) {
+    super.setMinValue(value == null ? Integer.MIN_VALUE : value);
+  }
+
+  /**
+   * Set the maximum value for this field. If value is <code>null</code>, it is replaced by Integer.MAX_VALUE.
+   */
+  @Override
+  public void setMaxValue(Integer value) {
+    super.setMaxValue(value == null ? Integer.MAX_VALUE : value);
+  }
+
+  /**
+   * uses {@link #parseToBigDecimalInternal(String)} to parse text and returns the result as Integer
+   */
   @Override
   protected Integer parseValueInternal(String text) throws ProcessingException {
     Integer retVal = null;
-    if (text == null) {
-      text = "";
-    }
-    else {
-      text = text.trim();
-    }
-    if (text.length() > 0) {
-      ParsePosition p = new ParsePosition(0);
-      Number n = createNumberFormat().parse(text, p);
-      if (p.getErrorIndex() >= 0 || p.getIndex() != text.length()) {
-        throw new ProcessingException(ScoutTexts.get("InvalidNumberMessageX", text));
-      }
-      retVal = new Integer(n.intValue());
+    BigDecimal parsedVal = parseToBigDecimalInternal(text);
+    if (parsedVal != null) {
+      retVal = Integer.valueOf(parsedVal.intValueExact());
     }
     return retVal;
   }
